Playtest candidate: tips overhaul, encyclopedia polish, README + downloads
- Tip screens: caption overrides (REF:caption), useful captions on all
  rows, 10 new tips covering fire, the gem hearth, the jade peach,
  surprise attacks, condition combos, knockback/chasms, thrown weapons,
  sleep/noise, renewing spawns, and taming
- Encyclopedia: gem pages get per-species flavor text; fleshed-out
  descriptions for chain mail, cherry bomb, fish, pear
- README.md: game summary, playtester thanks + tips, release download links
- Plus pending work in flight: sfx wav->ogg migration, account/cloud-save
  scaffolding (web/backend), new tests, UI fixes

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>